--- a/src/screens/ProfileScreen.css
+++ b/src/screens/ProfileScreen.css
@@ -23,16 +23,29 @@
     margin-bottom: 20px; 
     border-bottom: 1px solid #282c2d;
 }
-
-@media screen and (max-width: 800px) { 
-    .profile-screen-body > h1 {
-        font-size: 40px;
-    }
-}
 .profile-screen-details {
  margin-left: 25px;
  flex: 1;
 }
+
+@media screen and (max-width: 800px) { 
+    .profile-screen-body > h1 {
+        font-size: 40px;
+        text-align: center;
+    }
+    .profile-screen-info{
+        display: flex;
+        flex-direction: column;
+    }
+    .profile-screen-info > img {
+        height: 100%;
+        margin-bottom: 50px;
+    }
+    .profile-screen-details {
+        margin-left: 0px;
+    }
+}
+
 .profile-screen-details > h2 {
     font-size: calc(10px + 0.5vw);
     background-color: gray;
@@ -40,7 +53,7 @@
     padding-left: 20px;
 }
 .profile-plans > h3 {
-    font-size: calc(12px + 0.7vw);
+    font-size: calc(12px + 0.65vw);
     margin-bottom: 15px;
     margin-top: 10px;
     border-bottom: 1px solid #282c2d;
@@ -59,4 +72,38 @@
     border: none;
     cursor: pointer;
     font-weight: 600;
+}
+
+.profile-subscription-plan > p {
+    font-size: calc(8px + 0.6vw);
+}
+.profile-subscription-plan > p > span {
+    font-size: calc(6px + 0.6vw);
+}
+.profile-subscription-plans{
+    margin-left: 20px;
+}
+.profile-subscription-plan:hover{
+    opacity: 1;
+}
+.profile-subscription-plan{
+    display: flex;
+    opacity: 0.8;
+    align-items: center;
+    justify-content: space-between;
+}
+.subscribe-btn{
+    background-color: #e50914;
+    color: white;
+    padding: 10px 10px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+}
+.current-btn {
+    background-color: gray;
 }
